Bozza del javascript Init

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
-        <h1 class="titolo">Texil Paoli</h1>
+        <h1 id="titolo" class="titolo">Texil Paoli</h1>
         <h2 class="frasetta text-white-50 mx-auto mt-2 mb-5"><i>Tessuti e abbigliamento da oltre <strong style="font-size: 40px;">30</strong>
             anni.</i></h2>
         <br><br><br>
         <a href="#about" class="btn btn-primary js-scroll-trigger">CONTINUA</a>
         <br><br><br>
-        <p class="corebusiness text-white-50 text-justify mx-auto mt-2 mb-5">
+        <p id="chiSiamo" class="corebusiness text-white-50 text-justify mx-auto mt-2 mb-5">
           TEXIL PAOLI SRL OPERA NEL SETTORE DEL COMMERCIO DI TESSUTI E ABBIGLIAMENTO DI STOCK DA OLTRE 30 ANNI.
           IL NOSTRO CORE BUSINESS È IL RITIRO E LA COMMERCIALIZZAZIONE DI RIMANENZE DI PRODOTTO ( TESSUTI DI STOCE
           ABBIGLIAMENTO DI STOCK ) DI FAMOSI BRAND ITALIANI.
