Aggiunte delle stringhe (bozza)

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700|Cormorant+Garamond|Old+Standard+TT|Tangerine" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700|Cormorant+Garamond|Old+Standard+TT|Tangerine" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700|EB+Garamond|Old+Standard+TT|Patua+One|Tangerine" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700|EB+Garamond|Old+Standard+TT|Patua+One|Tangerine"
+    rel="stylesheet">
 
 </head>
 
@@ -68,11 +69,7 @@
         <br><br><br>
         <a href="#about" class="btn btn-primary js-scroll-trigger">CONTINUA</a>
         <br><br><br>
-        <p id="chiSiamo" class="corebusiness text-white-50 text-justify mx-auto mt-2 mb-5">
-          TEXIL PAOLI SRL OPERA NEL SETTORE DEL COMMERCIO DI TESSUTI E ABBIGLIAMENTO DI STOCK DA OLTRE 30 ANNI.
-          IL NOSTRO CORE BUSINESS È IL RITIRO E LA COMMERCIALIZZAZIONE DI RIMANENZE DI PRODOTTO ( TESSUTI DI STOCE
-          ABBIGLIAMENTO DI STOCK ) DI FAMOSI BRAND ITALIANI.
-        </p>
+        <p id="chiSiamo" class="corebusiness text-white-50 text-justify mx-auto mt-2 mb-5"></p>
       </div>
     </div>
 
@@ -438,7 +435,7 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+  <script src="js/custom.js"></script>
   <!-- Plugin JavaScript -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
   <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
